--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,6 @@
 [tox]
 envlist =
-    py{39,310}-django{32}
-    py{39,310}-django{42}
+    py{39,310,311}-django{32,40,42}
     isort
     black
     flake8
@@ -11,6 +10,7 @@ skip_missing_interpreters = true
 [gh-actions:env]
 DJANGO =
     3.2: django32
+    4.0: django40
     4.2: django42
 
 [testenv]
@@ -22,6 +22,7 @@ extras =
     coverage
 deps =
   django32: Django~=3.2.0
+  django40: Django~=4.0.0
   django42: Django~=4.2.0
 commands =
   py.test tests \
