chore: restrict linting to code and tests

--- a/tox.ini
+++ b/tox.ini
@@ -29,7 +29,7 @@ commands =
 [testenv:isort]
 extras = tests
 skipsdist = True
-commands = isort --check-only --diff .
+commands = isort --check-only --diff objectsapiclient/ testapp/ tests/
 
 [testenv:black]
 extras = tests
@@ -39,7 +39,7 @@ commands = black --check objectsapiclient testapp tests setup.py
 [testenv:flake8]
 extras = tests
 skipsdist = True
-commands = flake8 .
+commands = flake8 objectsapiclient/ testapp/ tests/
 
 # [testenv:docs]
 # basepython=python
