fix: add/correct metadata for PyPi publishing

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,6 +5,7 @@ name = objects-api-client-django
 version = 0.1.0
 description = Easily integrate Objects API in your Django application.
 long_description = file: README.rst
+long_description_content_type = text/x-rst
 url = https://github.com/maykinmedia/objects-api-client-django
 license = MIT
 author = Maykin Media
