--- a/tox.ini
+++ b/tox.ini
@@ -20,7 +20,7 @@ extras =
 deps =
   django42: Django~=4.2.0
 commands =
-  py.test tests \
+  pytest tests \
    --junitxml=reports/junit.xml \
    --cov --cov-report xml:reports/coverage-{envname}.xml \
    {posargs}
@@ -34,8 +34,3 @@ commands = isort --check-only --diff objectsapiclient/ testapp/ tests/
 extras = tests
 skipsdist = True
 commands = black --check objectsapiclient testapp tests setup.py
-
-[testenv:flake8]
-extras = tests
-skipsdist = True
-commands = flake8 objectsapiclient/ testapp/ tests/
