--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,7 @@
 [tox]
 envlist =
     py{311,312,313}-django{42}
-    isort
-    black
-    flake8
+    ruff
 skip_missing_interpreters = true
 
 [gh-actions:env]
@@ -25,12 +23,9 @@ commands =
    --cov --cov-report xml:reports/coverage-{envname}.xml \
    {posargs}
 
-[testenv:isort]
+[testenv:ruff]
 extras = tests
 skipsdist = True
-commands = isort --check-only --diff objectsapiclient/ testapp/ tests/
-
-[testenv:black]
-extras = tests
-skipsdist = True
-commands = black --check objectsapiclient testapp tests setup.py
+commands =
+    ruff check .
+    ruff format .
