--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,9 @@
 requires = ["setuptools >= 61.0"]
 build-backend = "setuptools.build_meta"
 
+#
+# Project configuration + metadata
+#
 [project]
 name = "objects-api-client-django"
 version = "0.3.0"
@@ -10,7 +13,7 @@ readme = "README.rst"
 requires-python = ">=3.11"
 license = {text = "MIT"}
 authors = [
-    {name = "Maykin Media", email = "support@maykinmedia.nl"}
+    {name = "Maykin", email = "support@maykinmedia.nl"}
 ]
 keywords = ["Objects API", "Client", "Django"]
 classifiers = [
@@ -39,24 +42,20 @@ tests = [
     "pytest",
     "pytest-django",
     "tox",
-    "isort",
-    "black",
-    "flake8",
+    "ruff",
 ]
-pep8 = ["flake8"]
 coverage = ["pytest-cov"]
-docs = [
-    "sphinx",
-    "sphinx-rtd-theme",
-]
 release = [
-    "bumpversion",
+    "bump-my-version",
     "twine",
 ]
 
 [project.urls]
 Homepage = "https://github.com/maykinmedia/objects-api-client-django"
 
+#
+# Tool configurations
+#
 [tool.setuptools]
 zip-safe = false
 include-package-data = true
@@ -64,24 +63,42 @@ include-package-data = true
 [tool.setuptools.packages.find]
 include = ["objectsapiclient", "objectsapiclient.*"]
 
-#
-# Tool configurations
-#
+[tool.bumpversion]
+current_version = "0.3.0"
+tag = true
+tag_name = "v{new_version}"
+commit = false
+
+[[tool.bumpversion.files]]
+filename = "pyproject.toml"
+
+[[tool.bumpversion.files]]
+filename = "README.rst"
+search = ":Version: {current_version}"
+replace = ":Version: {new_version}"
+
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 DJANGO_SETTINGS_MODULE = "testapp.settings"
+pythonpath = ["."]
 
-[tool.isort]
-profile = "black"
-combine_as_imports = true
-default_section = "THIRDPARTY"
-include_trailing_comma = true
-line_length = 88
-multi_line_output = 3
-force_grid_wrap = 0
-use_parentheses = true
-ensure_newline_before_comments = true
-skip = ["env", ".tox", ".history", ".eggs"]
-known_django = ["django"]
-known_first_party = ["objectsapiclient"]
-sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
+[tool.ruff]
+line-length = 88
+target-version = "py311"
+
+[tool.ruff.lint]
+select = [
+    "E",  # pycodestyle errors
+    "W",  # pycodestyle warnings
+    "F",  # pyflakes
+    "I",  # isort
+    "B",  # flake8-bugbear
+]
+
+[tool.ruff.lint.isort]
+known-first-party = ["objectsapiclient"]
+section-order = ["future", "standard-library", "django", "third-party", "first-party", "local-folder"]
+combine-as-imports = true
+
+[tool.ruff.lint.isort.sections]
+django = ["django"]
