--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,6 +56,14 @@ jobs:
         with:
           python-version: '3.11'
 
+      - name: Check changelog is release-ready
+        run: |
+          if grep -i "unreleased" CHANGELOG.rst; then
+            echo "ERROR: CHANGELOG.rst still contains 'Unreleased'"
+            echo "Please update the changelog with the correct version and date before releasing"
+            exit 1
+          fi
+
       - name: Build sdist and wheel
         run: |
           pip install --upgrade pip build
