--- a/tox.ini
+++ b/tox.ini
@@ -2,6 +2,7 @@
 envlist =
     py{311,312,313}-django{42}
     ruff
+    check-migrations
 skip_missing_interpreters = true
 
 [gh-actions:env]
@@ -29,3 +30,15 @@ skipsdist = True
 commands =
     ruff check .
     ruff format .
+
+[testenv:check-migrations]
+setenv =
+    DJANGO_SETTINGS_MODULE=testapp.settings
+    PYTHONPATH={toxinidir}
+extras = tests
+deps =
+    Django~=4.2.0
+    psycopg2-binary  # required for loading zgw-consumers migrations
+skipsdist = False
+commands =
+    django-admin makemigrations --check --dry-run --no-input
