chore: add ape_pie to project dependencies
The project already had a transitive dependency on ape_pie through
zgw_consumers. ape_pie is added as first-class dependency to add
type hints in the Client class.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ classifiers = [
 dependencies = [
     "django >= 4.2",
     "django-solo",
+    "ape_pie",
     "requests",
     "zgw_consumers",
 ]
